nav spacing correction

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -292,6 +292,7 @@ img {
     justify-content: space-between;
     align-items: center;
     margin-left: -8px;
+    margin-right: -8px;
     margin-top: 40px;
 }
 
